javaDSL/src/test/resources/typeSystemTestModels/valid/expressions/Motor.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.expressions;

public enum Motor {
  Monday,
  Tuesday
}
