javaDSL/src/test/resources/typeSystemTestModels/invalid/constructors/ConstructorMustNamedAsClass.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.constructors;

public class ConstructorMustNamedAsClass {

  public A(){

  }
}
